--- a/.github/workflows/convert_CI.yml
+++ b/.github/workflows/convert_CI.yml
@@ -29,13 +29,20 @@ jobs:
       
       - name: Check Python Version
         run: python --version
+        
+      - name: Install Requirements
+        run: pip install -r requirements.txt
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: ls
+      - name: Run Convert_tool Script to Make Changes in Script.
+        run: python3 convert_tool.py run
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "50518651+ashish-devv@users.noreply.github.com"
+
+          git add -A
+          git commit -m "Result Update"
+          git push
