--- a/.github/workflows/convert_CI.yml
+++ b/.github/workflows/convert_CI.yml
@@ -45,4 +45,4 @@ jobs:
 
           git add -A
           git commit -m "Result Update [ Automated Commit ]"
-          git push
+          git push origin final
