--- a/.github/workflows/convert_CI.yml
+++ b/.github/workflows/convert_CI.yml
@@ -33,17 +33,21 @@ jobs:
       - name: Install Requirements
         run: pip install -r requirements.txt
 
-      # Runs a single command using the runners shell
-      - name: Run Convert_tool Script to Make Changes in Script.
-        run: python3 convert_tool.py run
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Change to Final Branch
         run: |
           git config --global user.name "ashish-devv"
           git config --global user.email "akashish908@gmail.com"
           git pull origin final
           git checkout final
+
+      # Runs a single command using the runners shell
+      - name: Run Convert_tool Script to Make Changes in Script.
+        run: python3 convert_tool.py run
+
+      # Runs a set of commands using the runners shell
+      - name: push changes
+        run: |
+
 
           git add -A
           git commit -m "Result Update [ Automated Commit ]"
