--- a/.github/workflows/convert_CI.yml
+++ b/.github/workflows/convert_CI.yml
@@ -37,8 +37,6 @@ jobs:
         run: |
           git config --global user.name "ashish-devv"
           git config --global user.email "akashish908@gmail.com"
-          git pull origin final
-          git checkout final
 
       # Runs a single command using the runners shell
       - name: Run Convert_tool Script to Make Changes in Script.
@@ -48,7 +46,6 @@ jobs:
       - name: push changes
         run: |
 
-
           git add -A
           git commit -m "Result Update [ Automated Commit ]"
-          git push origin final
+          git push -f origin master:final
